add Styles attributor

--- a/true.show/demo/index.html
+++ b/true.show/demo/index.html
@@ -202,40 +202,40 @@ require(['marker'],
                 transform: '',
                 styles: '',
                 elements: [
-                {
-                    id: 'p0e1',
-                    name: 'p0e1',
-                    value: '编辑内容',
-                    type: 'text',
-                    styles: {
-                        left: '30px',
-                        top: '30px',
-                        width: '100px',
-                        height: '50px',
-                        'text-align': 'center'
-                    },
-                    animates: [{
-                        repeat: 0,
-                        duration: 0,
-                        class: 'flip',
-                        delay: 0
-                    }],
-                    events: [{
-                        "name": "click",
-                        "actions": [{
-                            "type": "show",
-                            "value": {
-                                "elems": []
-                            },
-                            "delay": 0
-                        }]
-                    }
-                    ],
-                    states: {
-                        lock: false,
-                        visible: true
-                    }
-                }
+                // {
+                //     id: 'p0e1',
+                //     name: 'p0e1',
+                //     value: '编辑内容',
+                //     type: 'text',
+                //     styles: {
+                //         left: '30px',
+                //         top: '30px',
+                //         width: '100px',
+                //         height: '50px',
+                //         'text-align': 'center'
+                //     },
+                //     animates: [{
+                //         repeat: 0,
+                //         duration: 0,
+                //         class: 'flip',
+                //         delay: 0
+                //     }],
+                //     events: [{
+                //         "name": "click",
+                //         "actions": [{
+                //             "type": "show",
+                //             "value": {
+                //                 "elems": []
+                //             },
+                //             "delay": 0
+                //         }]
+                //     }
+                //     ],
+                //     states: {
+                //         lock: false,
+                //         visible: true
+                //     }
+                // }
                 ]
             }
             // , {
