--- a/true.show/demo/index.html
+++ b/true.show/demo/index.html
@@ -248,7 +248,7 @@ require(['marker'],
 
         // 设置两个模块之间互相通信
         Marker.getAM().setMarker(Marker);
-        $('.plugin-btn[plugin-type="canvas"]').trigger('click');
+        $('.plugin-btn[plugin-type="text"]').trigger('click');
         
     });
 </script>
