update codes from osgit

--- a/true.show/demo/index.html
+++ b/true.show/demo/index.html
@@ -185,6 +185,9 @@
             </div>
         </div>
     </div>
+    <div id="ppt-mask">
+        <div id="pptbox"></div>
+    </div>
 </body>
 <script type="text/javascript" src="asset/js/require.js"></script>
 <script type="text/javascript">
