--- a/true.show/demo/index.html
+++ b/true.show/demo/index.html
@@ -186,7 +186,11 @@
         </div>
     </div>
     <div id="ppt-mask">
+        <span class="btn-close">&times;</span>
+    </div>
+    <div id="pptcontainer">
         <div id="pptbox"></div>
+        <div id="iSlider-arrow"></div>
     </div>
 </body>
 <script type="text/javascript" src="asset/js/require.js"></script>
