--- a/true.show/demo/test.html
+++ b/true.show/demo/test.html
@@ -14,9 +14,9 @@
 	<link rel="stylesheet" type="text/css" href="asset/css/animate.css">
 	</head>
 	<body>
-	<div id="tips" class="tips-right" style="left:100px;top: 100px;visibility:visible;">122</div>
+	<!-- <div id="tips" class="tips-right" style="left:100px;top: 100px;visibility:visible;">122</div>
 		<input type="button" value="读取剪贴板内容" onclick="readClipboardData();" />
-    <br /> <textarea rows="20" cols="60" id="txtContent"></textarea>
+    <br /> <textarea rows="20" cols="60" id="txtContent"></textarea> -->
 	</body>
 	<script type="text/javascript">
       function getClipboard() {
@@ -55,5 +55,36 @@
           var len = str.split("\n");//获取行数
 						document.getElementById("txtContent").value = str;
       }
+
+      window.onload = function () {
+        var c = document.createElement('canvas');
+        c.width = 300;
+        c.height = 300;
+        document.body.appendChild(c);
+        var ctx = c.getContext('2d');
+        ctx.lineWidth = 1;
+        ctx.beginPath();
+        ctx.moveTo(100, 4);
+        ctx.lineTo(100, 300);
+        ctx.stroke();
+
+        ctx.lineWidth = 1;
+        ctx.beginPath();
+        ctx.moveTo(150.5, 4);
+        ctx.lineTo(150.5, 300);
+        ctx.stroke();
+
+        ctx.lineWidth = 2;
+        ctx.beginPath();
+        ctx.moveTo(200, 4);
+        ctx.lineTo(200, 300);
+        ctx.stroke();
+
+        ctx.lineWidth = 2;
+        ctx.beginPath();
+        ctx.moveTo(250.5, 4);
+        ctx.lineTo(250.5, 300);
+        ctx.stroke();
+      };
 	</script>
 </html>
