--- a/true.show/demo/index.html
+++ b/true.show/demo/index.html
@@ -112,6 +112,10 @@
                 <div class="view-aside">
                     <div id="musicControl" class="marker-sounder" data-tips="暂停"><i class="fa fa-pause-circle"></i>音乐</div>
                 </div>
+
+                <div class="view-aside-animation">
+                    <div id="animationControl" class="marker-animation" data-tips="暂停"><i class="fa fa-pause-circle"></i>动画</div>
+                </div>
                 <div class="device-view">
                     <div class="ruler">
                         <div class="ruler-grid"></div>
