--- a/true.show/demo/test.html
+++ b/true.show/demo/test.html
@@ -1,82 +1,177 @@
 <!DOCTYPE html>
 <html>
-  <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="renderer" content="webkit">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=10, user-scalable=yes">
-	<meta name="description" content="">
-	<meta name="keywords" content="">
-	<title>PPT Marker</title>
-	<link rel="stylesheet" type="text/css" href="asset/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="asset/css/app.css">
-	<link rel="stylesheet" type="text/css" href="asset/css/animate.css">
-  <style id="{{STYLEID}}" type="text/css">
-  #div1 {
-    position: absolute;
-    left: 200px;
-    top: 100px;
-    width: 100px;
-    height: 100px;
-    background: #09e;
-  }
-  #div1.bounceIn-delay-1-duration-2-repeat-2 {
-    -webkit-animation-duration: 5s;
-    -webkit-animation-delay: 2s;
-    -webkit-animation-iteration-count: 2;
-  }</style>
-	</head>
-	<body>
-    <div id="div1"></div>
-	<!-- <div id="tips" class="tips-right" style="left:100px;top: 100px;visibility:visible;">122</div>
-		<input type="button" value="读取剪贴板内容" onclick="readClipboardData();" />
-    <br /> <textarea rows="20" cols="60" id="txtContent"></textarea> -->
-	</body>
-  <script src="asset/js/jquery.js"></script>
-	<script type="text/javascript">
-      function getClipboard() {
-          if (window.clipboardData) {
-              return (window.clipboardData.getData('Text'));
-          }
-          else if (window.netscape) {
-              netscape.security.PrivilegeManager.enablePrivilege('UniversalXPConnect');
-              var clip = Components.classes['@mozilla.org/widget/clipboard;1'].createInstance(Components.interfaces.nsIClipboard);
-              if (!clip) return;
-              var trans = Components.classes['@mozilla.org/widget/transferable;1'].createInstance(Components.interfaces.nsITransferable);
-              if (!trans) return;
-              trans.addDataFlavor('text/unicode');
-              clip.getData(trans, clip.kGlobalClipboard);
-              var str = new Object();
-              var len = new Object();
-              try {
-                  trans.getTransferData('text/unicode', str, len);
-              }
-              catch (error) {
-                  return null;
-              }
-              if (str) {
-                  if (Components.interfaces.nsISupportsWString) str = str.value.QueryInterface(Components.interfaces.nsISupportsWString);
-                  else if (Components.interfaces.nsISupportsString) str = str.value.QueryInterface(Components.interfaces.nsISupportsString);
-                  else str = null;
-              }
-              if (str) {  return (str.data.substring(0, len.value / 2));
-              }
-          }
-          return null;
-      }
-      function readClipboardData() {
-          var str = getClipboard();
-          console.log(str);
-          var len = str.split("\n");//获取行数
-						document.getElementById("txtContent").value = str;
-      }
 
-      window.onload = function () {
-        var $div = $('#div1');
-        var cls = "bounceIn bounceIn-delay-1-duration-2-repeat-2";
-        $div.addClass(cls + " animated").one('webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend', function () {
-          $(this).removeClass(cls + " animated");
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="renderer" content="webkit">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=10, user-scalable=yes">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <title>PPT Marker</title>
+    <link rel="stylesheet" type="text/css" href="asset/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="asset/css/app.css">
+    <link rel="stylesheet" type="text/css" href="asset/css/animate.css">
+    <style id="{{STYLEID}}" type="text/css">
+    #div1 {
+        position: absolute;
+        left: 200px;
+        top: 100px;
+        width: 400px;
+        height: 200px;
+        background: transparent;
+        border: 1px solid #ccc;
+        transform: rotate(30deg);
+    }
+    
+    #div1 .inner {
+        position: relative;
+        margin: 20px auto;
+        width: 80%;
+        height: 160px;
+        background: #09e;
+    }
+    
+    #div1.bounceIn-delay-1-duration-2-repeat-2 {
+        -webkit-animation-duration: 5s;
+        -webkit-animation-delay: 2s;
+        -webkit-animation-iteration-count: 2;
+    }
+    </style>
+</head>
+
+<body>
+    <div id="div1">
+        <div class="inner"></div>
+    </div>
+    <!-- <div id="tips" class="tips-right" style="left:100px;top: 100px;visibility:visible;">122</div>
+    <input type="button" value="读取剪贴板内容" onclick="readClipboardData();" />
+    <br /> <textarea rows="20" cols="60" id="txtContent"></textarea> -->
+</body>
+<script src="asset/js/jquery.js"></script>
+<script type="text/javascript">
+function getClipboard() {
+    if (window.clipboardData) {
+        return (window.clipboardData.getData('Text'));
+    } else if (window.netscape) {
+        netscape.security.PrivilegeManager.enablePrivilege('UniversalXPConnect');
+        var clip = Components.classes['@mozilla.org/widget/clipboard;1'].createInstance(Components.interfaces.nsIClipboard);
+        if (!clip) return;
+        var trans = Components.classes['@mozilla.org/widget/transferable;1'].createInstance(Components.interfaces.nsITransferable);
+        if (!trans) return;
+        trans.addDataFlavor('text/unicode');
+        clip.getData(trans, clip.kGlobalClipboard);
+        var str = new Object();
+        var len = new Object();
+        try {
+            trans.getTransferData('text/unicode', str, len);
+        } catch (error) {
+            return null;
+        }
+        if (str) {
+            if (Components.interfaces.nsISupportsWString) str = str.value.QueryInterface(Components.interfaces.nsISupportsWString);
+            else if (Components.interfaces.nsISupportsString) str = str.value.QueryInterface(Components.interfaces.nsISupportsString);
+            else str = null;
+        }
+        if (str) {
+            return (str.data.substring(0, len.value / 2));
+        }
+    }
+    return null;
+}
+
+function readClipboardData() {
+    var str = getClipboard();
+    console.log(str);
+    var len = str.split("\n"); //获取行数
+    document.getElementById("txtContent").value = str;
+}
+
+(function($) {
+    var __defaults = {
+
+    };
+
+
+    function getRotated (x, y, angle) {
+        angle = -angle * Math.PI / 180;
+        var cosAngle = Math.cos(angle);
+        var sinAngle = Math.sin(angle);
+        var relativeX = (x * cosAngle) - (y * sinAngle);
+        var relativeY = (x * sinAngle) + (y * cosAngle);
+
+        return {
+            x: relativeX,
+            y: relativeY
+        }
+    }
+
+    function getRotationDegrees (obj) {
+        var matrix = obj.css("-webkit-transform") ||
+            obj.css("-moz-transform") ||
+            obj.css("-ms-transform") ||
+            obj.css("-o-transform") ||
+            obj.css("transform");
+        if (matrix !== 'none') {
+            var values = matrix.split('(')[1].split(')')[0].split(',');
+            var a = values[0];
+            var b = values[1];
+            var angle = Math.round(Math.atan2(b, a) * (180 / Math.PI));
+        } else {
+            var angle = 0;
+        }
+        return (angle < 0) ? angle += 360 : angle;
+    }
+
+    $.fn.draggable = function(options) {
+        return $(this).each(function() {
+            $(this).on('mousedown', function(ev) {
+                var mouseX = ev.pageX;
+                var mouseY = ev.pageY;
+                var offset = $(this).offset();
+                var offsetX = offset.left;
+                var offsetY = offset.top;
+
+                var $that = $(this);
+                var deg = getRotationDegrees($that);
+                var target = getRotated(offsetX, offsetY, deg);
+
+                $that.attr('data-dragging', true);
+                $(this).attr('data-px', mouseX - target.x);
+                $(this).attr('data-py', mouseY - target.y);
+
+                $(document).on('mousemove', function(ev) {
+                    var mouseX = ev.pageX;
+                    var mouseY = ev.pageY;
+                    var targetX = mouseX - $that.attr('data-px');
+                    var targetY = mouseY - $that.attr('data-py');
+
+                    var deg = getRotationDegrees($that);
+                    var target = getRotated(targetX, targetY, deg);
+
+                    $that.css({
+                        position: 'absolute',
+                        left: targetX,
+                        top: targetY
+                    });
+
+                    $(document).on('mouseup', function(ev) {
+                        if ($that.attr('data-dragging')) {
+                            $(document).off('mousemove');
+                            $(document).off('mouseup');
+                            $that.removeAttr('data-dragging');
+                        }
+                    });
+                });
+            });
         });
-      };
-	</script>
+    }
+
+})(jQuery);
+
+window.onload = function() {
+    $('#div1').draggable();
+};
+</script>
+
 </html>
