bugfix and add event handler module

--- a/true.show/demo/index.html
+++ b/true.show/demo/index.html
@@ -239,7 +239,7 @@ require(['marker', 'PreviewSample'],
                         width: '214px',
                         height: '50px',
                         "text-align": 'center',
-                        content: 'True.Show',
+                        content: 'True Show',
                         color: '#ff7700',
                         "font-size": '41px',
                         "font-family": 'Heiti',
